--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tailwindCompile": "npx tailwindcss -i ./src/tailwind.css -o ./src/tailwind-compiled.css --watch"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
