--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-type-animation": "^3.2.0",
+    "recharts": "^2.12.3",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "tw-elements-react": "^1.0.0-alpha2"
