--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "tc": "npx tailwindcss -i ./src/tailwind.css -o ./src/tailwind-compiled.css --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "@reduxjs/toolkit": "^2.1.0",
+    "@table-library/react-table-library": "^4.1.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-table": "^8.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
