add emailer in reference to #13

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tc": "npx tailwindcss -i ./src/tailwind.css -o ./src/tailwind-compiled.css --watch"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.4",
     "@reduxjs/toolkit": "^2.1.0",
     "@table-library/react-table-library": "^4.1.7",
