add docker project date

--- a/src/data/projectList.json
+++ b/src/data/projectList.json
@@ -107,7 +107,7 @@
         ],
         "projUrl": "https://blankscreen-exe.github.io/docker-practice/",
         "githubUrl": "https://github.com/Blankscreen-exe/docker-practice",
-        "publishDate": null,
+        "publishDate": "Oct 2023",
         "thumbnailUrl": null,
         "category":"hobby",
         "status": "ongoing",
