--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.4",
+    "@marsidev/react-turnstile": "^0.7.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@table-library/react-table-library": "^4.1.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
