--- a/src/data/projectList.json
+++ b/src/data/projectList.json
@@ -48,7 +48,7 @@
     },
     {
         "title": "LawnPro Software",
-        "description": "Nft Showroom is a platform which showcases and authenticates the best and most innovative digital assets while providing a user friendly, accessible and a safe way for art enthusiasts and collectors to engage with the world of NFTs.",
+        "description": "This is a Lawn Business Software which comes prepacked with a bunch of features to manage employees, payments, customers and more.",
         "tags": [
             "PHP", 
             "Laravel", 
