update project url

--- a/src/data/projectList.json
+++ b/src/data/projectList.json
@@ -69,7 +69,7 @@
             "PHP", 
             "Yii"
         ],
-        "projUrl": "https://cloudmunshi.com",
+        "projUrl": "https://www.cloudmunshi.com/demo/munshi",
         "githubUrl": null,
         "publishDate": "Live and Ongoing",
         "thumbnailUrl":"project:cloudmunshi",
