add project thumbnail

--- a/src/data/projectList.json
+++ b/src/data/projectList.json
@@ -72,7 +72,7 @@
         ],
         "projUrl": null,
         "githubUrl": "https://github.com/Blankscreen-exe/Crypto-Price-Tracker",
-        "publishDate": null,
+        "publishDate": "Apr 2025",
         "thumbnailUrl": "https://raw.githubusercontent.com/Blankscreen-exe/Crypto-Price-Tracker/refs/heads/main/docs/assets/preview2.png",
         "category":"hobby",
         "status": "ongoing",
@@ -89,7 +89,7 @@
         "projUrl": null,
         "githubUrl": "https://github.com/Blankscreen-exe/The-Duck-Council",
         "publishDate": null,
-        "thumbnailUrl": null,
+        "thumbnailUrl": "https://raw.githubusercontent.com/Blankscreen-exe/The-Duck-Council/refs/heads/main/docs/assets/thumbnail.png",
         "category":"hobby",
         "status": "ongoing",
         "openToContrib": true
