add tech to project

--- a/src/data/projectList.json
+++ b/src/data/projectList.json
@@ -84,7 +84,8 @@
         "tags": [
             "Crew.ai", 
             "Python",
-            "Flask"
+            "Flask",
+            "React.js"
         ],
         "projUrl": null,
         "githubUrl": "https://github.com/Blankscreen-exe/The-Duck-Council",
