add project url for void

--- a/src/data/projectList.json
+++ b/src/data/projectList.json
@@ -269,7 +269,7 @@
             "CSS",
             "HTML"
         ],
-        "projUrl": "https://github.com/Blankscreen-exe/the-void",
+        "projUrl": "https://blankscreen-exe.github.io/the-void/",
         "githubUrl": "https://github.com/Blankscreen-exe/the-void",
         "publishDate": "Feb 2025",
         "thumbnailUrl": "https://raw.githubusercontent.com/Blankscreen-exe/the-void/refs/heads/main/docs/assets/thumbnail.png",
